; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_number.c_array_inplace_left_shift.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_number.c_array_inplace_left_shift.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@nb_inplace_lshift = common dso_local global i32 0, align 4
@n_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @array_inplace_left_shift to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @array_inplace_left_shift(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32, i32* @nb_inplace_lshift, align 4
  %8 = call i32 @INPLACE_GIVE_UP_IF_NEEDED(i32* %5, i32* %6, i32 %7, i32* (i32*, i32*)* @array_inplace_left_shift)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @n_ops, i32 0, i32 0), align 4
  %12 = call i32* @PyArray_GenericInplaceBinaryFunction(i32* %9, i32* %10, i32 %11)
  ret i32* %12
}

declare dso_local i32 @INPLACE_GIVE_UP_IF_NEEDED(i32*, i32*, i32, i32* (i32*, i32*)*) #1

declare dso_local i32* @PyArray_GenericInplaceBinaryFunction(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
